#[[
  Copyright (c) 2025 Edward Boggis-Rolfe
  All rights reserved.
]]
cmake_minimum_required(VERSION 3.24)

project(shared_ptr_tests, LANGUAGES CXX)

# Add subdirectories for shared_ptr/weak_ptr tests (excluding unique_ptr tests)
add_subdirectory(Dev09_153419_tr1_allocators)
add_subdirectory(Dev09_174589_tr1_function_storing_pmf_called_with_reference_or_pointer)
add_subdirectory(Dev09_196243_tr1_enable_shared_from_this_ops)
add_subdirectory(Dev10_445289_make_shared)
add_subdirectory(Dev10_498944_enable_shared_from_this_auto_ptr)
add_subdirectory(Dev10_654977_655012_shared_ptr_move)
add_subdirectory(Dev10_851347_weak_ptr_virtual_inheritance)
add_subdirectory(Dev11_0376122_grand_theft_bind)
add_subdirectory(Dev11_0920385_list_sort_allocator)
add_subdirectory(Dev11_1066589_shared_ptr_atomic_deadlock)
add_subdirectory(LWG3018_shared_ptr_function)
add_subdirectory(P0674R1_make_shared_for_arrays)
add_subdirectory(P0718R2_atomic_smart_ptrs)
add_subdirectory(P1020R1_smart_pointer_for_overwrite)
add_subdirectory(P1135R6_atomic_wait)
add_subdirectory(P2162R2_std_visit_for_derived_classes_from_variant)
add_subdirectory(VSO_0000000_has_static_rtti)
add_subdirectory(VSO_0000000_initialize_everything)
add_subdirectory(VSO_0000000_instantiate_containers)
add_subdirectory(VSO_0105317_expression_sfinae)
add_subdirectory(VSO_0157762_feature_test_macros)

add_subdirectory(Dev10_847656_shared_ptr_is_convertible)
add_subdirectory(Dev10_500860_overloaded_address_of)
add_subdirectory(Dev10_635436_shared_ptr_reset)
add_subdirectory(Dev10_722102_shared_ptr_nullptr)
add_subdirectory(Dev11_0000000_tuple_cat)
add_subdirectory(Dev11_0000000_user_defined_literals)
add_subdirectory(Dev11_0535636_functional_overhaul)
add_subdirectory(GH_002299_implicit_sfinae_constraints)
add_subdirectory(GH_005315_destructor_tombstones)
add_subdirectory(P0414R2_shared_ptr_for_arrays)
add_subdirectory(P0433R2_deduction_guides)
add_subdirectory(P0513R0_poisoning_the_hash)
add_subdirectory(P1132R7_out_ptr)
add_subdirectory(P2286R8_text_formatting_formattable)
add_subdirectory(P2404R3_move_only_types_for_comparison_concepts)
add_subdirectory(VSO_0000000_instantiate_iterators_misc)